# ENPM808X_PacMan

./: CMakeLists.txt  README.md  compile_commands.json  package.xml
.github/workflows/: build_and_coveralls.yml  cmake.yml
docs/: DoxyFile  introduction.txt
docs/html/: annotated.html  classMaster-members.html  classMaster.html  classMaster__coll__graph.map  classMaster__inherit__graph.md5  classRoomBa-members.html  classRoomBa.html  classRoomBa__inherit__graph.map  classRoomBa__inherit__graph.md5  classTestPubSub-members.html  classTestPubSub.html  classTestPubSub__inherit__graph.map  classTestPubSub__inherit__graph.md5  classTrajectory-members.html  classTrajectory.html  classes.html  dir_000002_000001.html  dir_000003_000001.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherits.html  introduction_8txt.html  (+39 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js
docs/latex/: annotated.tex  classMaster.tex  classMaster__inherit__graph.md5  classRoomBa.tex  classRoomBa__coll__graph.md5  classTestPubSub.tex  classTestPubSub__coll__graph.md5  classTrajectory.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hierarchy.tex  index.tex  master_8cpp.tex  master_8cpp__incl.md5  master_8hpp.tex  master_8hpp__dep__incl.md5  master_8hpp__incl.md5  pubsub_8cpp.tex  pubsub_8cpp__incl.md5  pubsub_8hpp.tex  pubsub_8hpp__dep__incl.md5  pubsub_8hpp__incl.md5  pubsub__test_8cpp.tex  pubsub__test_8cpp__incl.md5  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  src_2main_8cpp.tex  src_2main_8cpp__incl.md5  test_2main_8cpp.tex  test_2main_8cpp__incl.md5  test_8cpp.tex  test_8cpp__incl.md5  (+5 more)
include/: master.hpp  pubsub.hpp  trajectory.hpp
launch/: empty_world.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  turtlebot3_world.launch.py
models/turtlebot3_burger/: model.sdf
results/: cppcheck.txt  cpplint_master.txt  cpplint_master_hpp.txt  cpplint_pubsub.txt  cpplint_pubsub_hpp.txt  cpplint_trajectory.txt  cpplint_trajectory_hpp.txt
src/: main.cpp  master.cpp  pubsub.cpp  trajectory.cpp
test/: main.cpp  pubsub_test.cpp  test.cpp
